tolk-tester/tests/invalid-symbol/err-2503.tolk
fun main() {
    return [1, 2, 3].1;
}

/**
@compilation_should_fail
@stderr use `array.get(1)`, not `array.1`
 */
